--- a/app/views/shared/_patient_profile.html.erb
+++ b/app/views/shared/_patient_profile.html.erb
@@ -44,8 +44,15 @@
   <div class="row justify-content-around">
     <div class="card col-5 d-flex justify-content-center mt-3" style="height: 120px; background-color: #eddbd8; border-radius: 8px; border: none;" >
       <div style="text-align: center">
+        <% if @last_consultation.present? %>
         <% doctor_signed_in? ? path = doctor_consultation_path(@last_consultation) : path = consultation_path(@last_consultation) %>
         <%= link_to path do %>
+          <%= image_tag "https://res.cloudinary.com/kyulol/image/upload/v1598880705/last-consult_qhvtsy.png", class:"mt-2", style:"height: 50px;" %>
+          <div>
+            <p class="card-text mt-3 font-weight-bold text-center" style="color: #395579;">Last consultation</p>
+          </div>
+        <% end %>
+        <% else %>
           <%= image_tag "https://res.cloudinary.com/kyulol/image/upload/v1598880705/last-consult_qhvtsy.png", class:"mt-2", style:"height: 50px;" %>
           <div>
             <p class="card-text mt-3 font-weight-bold text-center" style="color: #395579;">Last consultation</p>
