removing old cloudinary references

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,7 @@
 <div class="d-flex justify-content-between align-items-center p-2 col-12" >
   <div class="ml-3">
     <%= link_to root_path do %>
-      <img src="https://res.cloudinary.com/kyulol/image/upload/v1598371571/test_syrfsm.png" alt="Logo Youmind" id="logo-navbar">
+      <p>Home</p>
     <% end %>
   </div>
 
@@ -52,19 +52,12 @@
   <%# if I18n.locale == :fr %>
     <%# ---------------french flag--------------- %>
 <!--    <div class="dropright stagger-link" id="flags">-->
-      <%#= link_to(root_path(locale: :fr), {"class" => "dropdown-toggle", "role" => "button", "id" => "dropDownFlag", "data-toggle" => "dropdown", "aria-haspopup" => "true", "aria-expanded" => "false"}) do %>
-<!--        <img src="https://res.cloudinary.com/kyulol/image/upload/v1598281901/french-flag_dvs8vi.png" class="flag-icon" alt="french-flag">-->
-      <%# end %>
 
       <%# ---------------english flag--------------- %>
 
 <!--      <div class="dropdown-menu flag-drop-right" aria-labelledby="dropDownFlag">-->
-        <%#= link_to(root_path(locale: :en), {"class" => "dropdown-item link-drop-item"}) do %>
-<!--          <img src="https://res.cloudinary.com/kyulol/image/upload/v1598281901/uk-flag_lztcpr.png" class="flag-icon" alt="uk-flag">-->
-        <%# end %>
-        <%# <a class="dropdown-item" href="#">
-          <img src="https://res.cloudinary.com/kyulol/image/upload/v1598281901/uk-flag_lztcpr.png" class="flag-icon" alt="uk-flag">
-        </a> %>
+
+
 <!--      </div>-->
 <!--    </div>-->
 
@@ -72,19 +65,13 @@
 
     <%# ---------------english flag--------------- %>
 <!--    <div class="dropright stagger-link" id="flags">-->
-      <%#= link_to(root_path(locale: :en), {"class" => "dropdown-toggle", "role" => "button", "id" => "dropDownFlag", "data-toggle" => "dropdown", "aria-haspopup" => "true", "aria-expanded" => "false"}) do %>
-<!--        <img src="https://res.cloudinary.com/kyulol/image/upload/v1598281901/uk-flag_lztcpr.png" class="flag-icon" alt="french-flag">-->
-      <%# end %>
+
 
       <%# ---------------french flag--------------- %>
 
 <!--      <div class="dropdown-menu flag-drop-right" aria-labelledby="dropDownFlag">-->
-        <%#= link_to(root_path(locale: :fr), {"class" => "dropdown-item link-drop-item"}) do %>
-<!--          <img src="https://res.cloudinary.com/kyulol/image/upload/v1598281901/french-flag_dvs8vi.png" class="flag-icon" alt="uk-flag">-->
-        <%# end %>
-        <%# <a class="dropdown-item" href="#">
-          <img src="https://res.cloudinary.com/kyulol/image/upload/v1598281901/uk-flag_lztcpr.png" class="flag-icon" alt="uk-flag">
-        </a> %>
+
+
 <!--      </div>-->
 <!--    </div>-->
 
@@ -105,9 +92,7 @@
 
 
     <%# ----------------div logo---------------- %>
-    <%#= link_to root_path, class: "stagger-link" do %>
-<!--      <img src="https://res.cloudinary.com/kyulol/image/upload/v1598371571/test_syrfsm.png" alt="Logo Youmind" id="logo-navbar">-->
-    <%# end %>
+
 
     <%# --------------2eme navbar-------------- %>
 <!--    <nav class="cl-effect-11 navbar-nav d-flex justify-content-around col-md-4">-->
