git commit change devise controllers names on patient's side

--- a/app/views/doctor/patients/index.html.erb
+++ b/app/views/doctor/patients/index.html.erb
@@ -21,7 +21,7 @@
 <!--      <div style="text-align: center">-->
         <%#= link_to new_doctor_patient_path do %>
 <!--          <div>-->
-<!--            <p class="card-text mt-3 font-weight-bold text-center" style="color: #395579;">Add a patients</p>-->
+<!--            <p class="card-text mt-3 font-weight-bold text-center" style="color: #395579;">Add a patient</p>-->
 <!--          </div>-->
         <%# end %>
 <!--      </div>-->
