responsive navbar, landing page

--- a/app/views/doctor/patients/index.html.erb
+++ b/app/views/doctor/patients/index.html.erb
@@ -1,4 +1,4 @@
-<div class="col-12" style="background-color: #AABAD9;">
+<div class="col-12" style="background-color: #AABAD9; margin-top: 70px;">
 
   <div class="row d-flex align-items-center justify-content-center">
     <div class="col-2">
