--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,21 +1,21 @@
-<div class="d-flex justify-content-around p-2 col-12" style="position: fixed; bottom: 0; background-color: white;">
-  <% if doctor_signed_in? && @chatroom.present? && @videoroom.present? %>
-    <%= link_to doctor_chatroom_path(@chatroom) do %>
-      <i class="fas fa-comments fa-3x" style="color: #395579;"></i>
-    <% end %>
-    <%= link_to doctor_videoroom_path(@videoroom) do %>
-        <i class="fas fa-phone-volume fa-3x" style="color: #395579;"></i>
-    <% end %>
-  <% elsif patient_signed_in? && @chatroom.present? && @videoroom.present? %>
-    <%= link_to chatroom_path(@chatroom) do %>
-      <i class="fas fa-comments fa-3x" style="color: #395579;"></i>
-    <% end %>
-    <%= link_to videoroom_path(@videoroom) do %>
-      <i class="fas fa-phone-volume fa-3x" style="color: #395579;"></i>
-    <% end %>
-  <% else %>
-    <footer class="pt-2">
-      <p class="text-center">2020 © YouMind. All rights reserved.</p>
-    </footer>
-  <% end %>
-</div>
+<!--<div class="d-flex justify-content-around p-2 col-12" style="position: fixed; bottom: 0; background-color: white;">-->
+  <%# if doctor_signed_in? && @chatroom.present? && @videoroom.present? %>
+    <%#= link_to doctor_chatroom_path(@chatroom) do %>
+<!--      <i class="fas fa-comments fa-3x" style="color: #395579;"></i>-->
+    <%# end %>
+    <%#= link_to doctor_videoroom_path(@videoroom) do %>
+<!--        <i class="fas fa-phone-volume fa-3x" style="color: #395579;"></i>-->
+    <%# end %>
+  <%# elsif patient_signed_in? && @chatroom.present? && @videoroom.present? %>
+    <%#= link_to chatroom_path(@chatroom) do %>
+<!--      <i class="fas fa-comments fa-3x" style="color: #395579;"></i>-->
+    <%# end %>
+    <%#= link_to videoroom_path(@videoroom) do %>
+<!--      <i class="fas fa-phone-volume fa-3x" style="color: #395579;"></i>-->
+    <%# end %>
+  <%# else %>
+<!--    <footer class="pt-2">-->
+<!--      <p class="text-center">2020 © YouMind. All rights reserved.</p>-->
+<!--    </footer>-->
+  <%# end %>
+<!--</div>-->
