--- a/app/views/doctor/patients/index.html.erb
+++ b/app/views/doctor/patients/index.html.erb
@@ -1,47 +1,30 @@
-<div class="col-12" style="background-color: #AABAD9; margin-top: 70px;">
+<div class="container" style="margin-top: 70px;">
 
-  <div class="row d-flex align-items-center justify-content-center">
-    <div class="col-2">
-      <%= link_to root_path do %>
-        <i class="fas fa-chevron-circle-left fa-3x mt-3" style="color: #395579; text-decoration: none;"></i>
-      <% end %>
-    </div>
-    <div class="col-8 mt-3">
-      <h2 class="card-text font-weight-bold text-center mb-2">My patients</h2>
-    </div>
-    <div class="col-2">
-      <%= link_to new_doctor_patient_path do %>
-        <i class="fas fa-user-plus fa-2x mt-3" style="color: #395579; text-decoration: none;"></i>
-      <% end %>
-    </div>
-  </div>
-
-<!--  <div class="justify-content-around">-->
-<!--    <div class="card col-4 d-flex justify-content-center mt-3" style="height: 120px; background-color: #eddbd8; border-radius: 8px; border: none;" >-->
-<!--      <div style="text-align: center">-->
-        <%#= link_to new_doctor_patient_path do %>
-<!--          <div>-->
-<!--            <p class="card-text mt-3 font-weight-bold text-center" style="color: #395579;">Add a patient</p>-->
-<!--          </div>-->
-        <%# end %>
-<!--      </div>-->
-<!--    </div>-->
-
-  <% @patients.each do |patient| %>
-    <%= link_to doctor_patient_path(patient) do %>
-      <div class="row justify-content-around">
-        <div class="card col-8 d-flex justify-content-center mt-3 p-2" style="height: auto; background-color: white; border-radius: 8px; border: none;" >
-          <p class="ml-5 card-text font-weight-bold text-left mb-2"><%= patient.full_name %></p>
-        </div>
+    <div class="row d-flex align-items-center justify-content-center">
+      <div class="col-2">
+        <%= link_to root_path do %>
+          <i class="fas fa-chevron-circle-left fa-3x mt-3" style="color: #395579; text-decoration: none;"></i>
+        <% end %>
       </div>
-    <% end %>
-  <% end %>
+      <div class="col-8 mt-3">
+        <h2 class="card-text font-weight-bold text-center mb-2">My patients</h2>
+      </div>
+      <div class="col-2">
+        <%= link_to new_doctor_patient_path do %>
+          <i class="fas fa-user-plus fa-2x mt-3" style="color: #395579; text-decoration: none;"></i>
+        <% end %>
+      </div>
+    </div>
 
-  <br>
-  <br>
-  <br>
+
+    <ul class="list-group mt-5">
+      <% @patients.each do |patient| %>
+        <%= link_to doctor_patient_path(patient) do %>
+          <li class="list-group-item"><%= patient.full_name %></li>
+        <% end %>
+      <% end %>
+    </ul>
 
 </div>
-
 
 
