--- a/app/views/shared/_patient_profile.html.erb
+++ b/app/views/shared/_patient_profile.html.erb
@@ -1,69 +1,51 @@
-<div class="col-12" style="background-color: #AABAD9;">
+<div class="container" style="margin-top: 70px;">
 
-
-  <div class="row d-flex align-items-center justify-content-center">
-    <div class="col-2">
-      <% doctor_signed_in? ? path = doctor_patients_path : path = root_path %>
-      <%= link_to path do %>
-        <i class="fas fa-chevron-circle-left fa-3x mt-3" style="color: #395579;"></i>
-      <% end %>
-    </div>
-    <div class="col-10 mt-3">
-      <h2 class="card-text font-weight-bold text-center mb-2"><%= doctor_signed_in? ? @patient.full_name : "Dashboard" %></h2>
-    </div>
-    <% if doctor_signed_in? %>
-      <div class="row d-flex justify-content-center align-items-center mt-3">
-        <div class="m-2 col-10">
-          <a href="tel:<%= @patient.phone_number %>" style="color: #395579;">
-            <i class="fas fa-phone mr-3"></i>
-            <%= @patient.phone_number %>
-          </a>
-        </div>
-        <div class="m-2 col-10">
-          <i class="fas fa-notes-medical mr-3"></i>
-          <%= @patient.avs_number %>
-        </div>
-        <div class="m-2 col-10">
-          <a href="https://www.google.com/maps/place/<%= @patient.full_address %>" target=”_blank” style="color: #395579;">
-            <i class="fas fa-address-card mr-3"></i>
-            <%= @patient.full_address %>
-          </a>
-        </div>
-      </div>
+  <div class="col-2">
+    <% doctor_signed_in? ? path = doctor_patients_path : path = root_path %>
+    <%= link_to path do %>
+      <i class="fas fa-chevron-circle-left fa-3x mt-3" style="color: #395579;"></i>
     <% end %>
   </div>
 
-  <% if patient_signed_in? && current_patient.draft? %>
+  <% if doctor_signed_in? %>
     <div class="row justify-content-center">
-      <div class="card col-11 d-flex justify-content-center mt-3 mb-5 d-inline-block h-auto" style="height: 120px; background-color: white; border-radius: 8px; border: none;" >
-        <div class=" row justify-content-center mt-3 align-items-center">
-          <h2 class="col-10 card-text font-weight-bold text-center" style="color: #395579;">Information</h2>
-          <div class="col-2"></div>
+      <div class="card" style="width: 18rem;">
+        <div class="card-body">
+          <h1 class="card-title"><%= @patient.full_name %></h1>
+          <p class="card-text"><i class="fas fa-phone mr-3"></i><%= @patient.phone_number %></p>
+          <p class="card-text"><i class="fas fa-notes-medical mr-3"></i><%= @patient.avs_number %></p>
+          <p class="card-text"><i class="fas fa-address-card mr-3"></i><%= @patient.full_address %></p>
         </div>
-        <div class="row justify-content-center">
-          <%= simple_form_for [ @patient ], url: activate_path, class: "col-12" do |f| %>
-            <div class="mb-3 col-12">
-              <%= f.input :phone_number, label: false%>
-            </div>
-            <div class="mb-3 col-12">
-              <%= f.input :avs_number, label: false %>
-            </div>
-            <div class="mb-3 col-12">
-              <%= f.input :city, label: false %>
-            </div>
-            <div class="mb-3 col-12">
-              <%= f.input :zip, label: false %>
-            </div>
-            <div class="mb-3 col-12">
-              <%= f.input :street, label: false %>
-            </div>
-            <div class='col-12'>
-              <%= f.submit "Save", class: "btn btn-primary mt-2 mb-3" %>
-            </div>
-          <% end %>
-        </div>
-
       </div>
+    </div>
+  <% end %>
+
+  <% if patient_signed_in? && current_patient.draft? %>
+    <h2 class="row justify-content-center">Please submit your information</h2>
+    <div class="row justify-content-center mt-5">
+      <%= simple_form_for [ @patient ], url: activate_path, class: "col-12" do |f| %>
+        <div class="form-group">
+          <label for="exampleInputPhone">Phone number</label>
+          <%= f.input :phone_number, label: false%>
+        </div>
+        <div class="form-group">
+          <label for="exampleInputAvs">AVS number</label>
+          <%= f.input :avs_number, label: false %>
+        </div>
+        <div class="form-group">
+          <label for="exampleInputCiy">City</label>
+          <%= f.input :city, label: false %>
+        </div>
+        <div class="form-group">
+          <label for="exampleInputZip">ZIP</label>
+          <%= f.input :zip, label: false %>
+        </div>
+        <div class="form-group">
+          <label for="exampleInputStreet">Street</label>
+          <%= f.input :street, label: false %>
+        </div>
+        <%= f.submit "Save", class: "btn btn-primary mt-2 mb-3" %>
+      <% end %>
     </div>
   <% else %>
     <div class="row justify-content-around">
@@ -79,12 +61,12 @@
       <div class="card col-5 d-flex justify-content-center mt-3" style="height: 120px; background-color: #eddbd8; border-radius: 8px; border: none;" >
         <div style="text-align: center">
           <% if @last_consultation.present? %>
-          <% doctor_signed_in? ? path = doctor_consultation_path(@last_consultation) : path = consultation_path(@last_consultation) %>
-          <%= link_to path do %>
-            <div>
-              <p class="card-text mt-3 font-weight-bold text-center" style="color: #395579;">Last consultation</p>
-            </div>
-          <% end %>
+            <% doctor_signed_in? ? path = doctor_consultation_path(@last_consultation) : path = consultation_path(@last_consultation) %>
+            <%= link_to path do %>
+              <div>
+                <p class="card-text mt-3 font-weight-bold text-center" style="color: #395579;">Last consultation</p>
+              </div>
+            <% end %>
           <% else %>
             <div>
               <p class="card-text mt-3 font-weight-bold text-center" style="color: #395579;">Last consultation</p>
@@ -124,9 +106,5 @@
       </div>
     <% end %>
   <% end %>
-
-  <br>
-  <br>
-  <br>
 
 </div>
