--- a/app/assets/stylesheets/pages/_users-sign_in.scss
+++ b/app/assets/stylesheets/pages/_users-sign_in.scss
@@ -39,7 +39,7 @@ input.form-control:focus {
 }
 
 .form-control {
-  background-image: linear-gradient(to right, rgba(255, 158, 64, 0), rgba(255, 158, 64, 0.2), rgba(255, 158, 64, 0.5));
-  border: none;
+  //background-image: linear-gradient(to right, rgba(255, 158, 64, 0), rgba(255, 158, 64, 0.2), rgba(255, 158, 64, 0.5));
+  //border: none;
 }
 
