--- a/app/views/doctor/patients/index.html.erb
+++ b/app/views/doctor/patients/index.html.erb
@@ -1,20 +1,21 @@
 <div class="container" style="margin-top: 70px;">
 
-    <div class="row d-flex align-items-center justify-content-center">
-      <div class="col-2">
-        <%= link_to root_path do %>
-          <i class="fas fa-chevron-circle-left fa-3x mt-3" style="color: #395579; text-decoration: none;"></i>
-        <% end %>
-      </div>
-      <div class="col-8 mt-3">
-        <h2 class="card-text font-weight-bold text-center mb-2">My patients</h2>
-      </div>
-      <div class="col-2">
-        <%= link_to new_doctor_patient_path do %>
-          <i class="fas fa-user-plus fa-2x mt-3" style="color: #395579; text-decoration: none;"></i>
-        <% end %>
-      </div>
+  <div class="row mb-5">
+    <div class="col-2">
+      <%= link_to root_path do %>
+        <i class="fas fa-chevron-circle-left fa-3x mt-3 mb-3" style="color: #395579;"></i>
+      <% end %>
     </div>
+    <div class="col-8 mt-3">
+      <h1 class="card-text font-weight-bold text-center mb-2">My patients</h1>
+    </div>
+  </div>
+
+  <div class="row justify-content-center">
+    <%= link_to new_doctor_patient_path do %>
+      <p class="col-12 btn btn-primary mt-5">New patient<i class="fa fa-plus-square ml-3"></i></p>
+    <% end %>
+  </div>
 
 
     <ul class="list-group mt-5">
