--- a/app/views/shared/_consultation_show.html.erb
+++ b/app/views/shared/_consultation_show.html.erb
@@ -1,25 +1,24 @@
-<div class="col-12" style="background-color: #AABAD9;">
+<div class="container" style="margin-top: 70px;">
 
-  <div class="row d-flex align-items-center justify-content-center">
+  <div class="row mb-5">
     <div class="col-2">
       <% doctor_signed_in? ? path = doctor_patient_path(@patient) : path = dashboard_path %>
       <%= link_to path do %>
-        <i class="fas fa-chevron-circle-left fa-3x mt-3" style="color: #395579;"></i>
+        <i class="fas fa-chevron-circle-left fa-3x mt-3 mb-3" style="color: #395579;"></i>
       <% end %>
     </div>
-    <div class="col-10 mt-3">
-      <h2 class="card-text font-weight-bold text-center mb-2">Last consultation</h2>
+    <div class="col-8 mt-3">
+      <h1 class="card-text font-weight-bold text-center mb-2">Consultation</h1>
     </div>
-    <p class="text-center mt-3"><%= @consultation.full_date %></p>
   </div>
 
   <div class="row justify-content-center">
     <div class="card col-11 d-flex justify-content-center mt-3 mb-5 d-inline-block h-auto" style="height: 120px; background-color: white; border-radius: 8px; border: none;" >
       <div class=" row justify-content-center mt-3 align-items-center">
-        <h2 class="col-10 card-text font-weight-bold text-center" style="color: #395579;">Public report</h2>
+        <h2 class="col-12 card-text font-weight-bold text-center" style="color: #395579;">Public report</h2>
         <% if doctor_signed_in? %>
           <%= link_to edit_doctor_consultation_path(@consultation) do %>
-            <i class="fas fa-edit col-2" style="color: #395579;"></i>
+            <p class="btn btn-primary">Edit report<i class="fas fa-edit col-2" style="color: white;"></i></p>
           <% end %>
         <% end %>
       </div>
@@ -33,9 +32,9 @@
     <div class="row justify-content-center">
       <div class="card col-11 d-flex justify-content-center mt-3 mb-5 d-inline-block h-auto" style="height: 120px; background-color: white; border-radius: 8px; border: none;" >
         <div class="row justify-content-center mt-3 align-items-center">
-          <h2 class="col-10 card-text font-weight-bold text-center" style="color: #395579;">Personal notes</h2>
+          <h2 class="col-12 card-text font-weight-bold text-center" style="color: #395579;">Personal notes</h2>
           <%= link_to edit_doctor_consultation_path(@consultation) do %>
-            <i class="fas fa-edit col-2" style="color: #395579;"></i>
+            <p class="btn btn-primary">Edit notes<i class="fas fa-edit col-2" style="color: white;"></i></p>
           <% end %>
         </div>
         <div>
@@ -48,10 +47,10 @@
   <div class="row justify-content-center">
     <div class="card col-11 d-flex justify-content-center mt-3 mb-5 d-inline-block h-auto" style="height: 120px; background-color: white; border-radius: 8px; border: none;" >
       <div class=" row justify-content-center mt-3 align-items-center">
-        <h2 class="col-10 card-text font-weight-bold text-center" style="color: #395579;">Prescription</h2>
+        <h2 class="col-12 card-text font-weight-bold text-center" style="color: #395579;">Prescription</h2>
         <% if doctor_signed_in? %>
           <%= link_to edit_doctor_consultation_path(@consultation) do %>
-            <i class="fas fa-plus-circle col-2" style="color: green; opacity: 0.7;"></i>
+            <p class="btn btn-primary">New drug<i class="fas fa-plus-circle col-2" style="color: 395579; "></i></p>
           <% end %>
         <% end %>
       </div>
@@ -59,19 +58,19 @@
         <% @consultation_medications.each do |consultation_medication| %>
           <div class="card-text mb-3 p-2 text-left d-inline-block h-auto w-100 border border-2" style="border-radius: 10px; border-color: #395579;">
             <div class="row">
-              <p class="col-3 card-text mb-3 p-2 text-center d-inline-block" style="border-radius: 10px; border-color: #395579;"><%= consultation_medication.quantity %></p>
-              <p class="col-9 card-text mb-3 p-2 text-center d-inline-block" style="border-radius: 10px; border-color: #395579;"><%= consultation_medication.medication.name %></p>
+              <p class="col-2 card-text text-center d-inline-block" style="border-radius: 10px; border-color: #395579;"><%= consultation_medication.quantity %></p>
+              <p class="col-10 card-text text-center d-inline-block" style="border-radius: 10px; border-color: #395579;"><%= consultation_medication.medication.name %></p>
             </div>
-            <p class="col-12 card-text mb-1 p-2 text-right d-inline-block" style="border-radius: 10px; border-color: #395579;"><%= consultation_medication.description %></p>
-          </div>
-          <div class="row justify-content-around mb-3">
+            <p class="col-12 card-text mb-1 p-2 d-inline-block" style="border-radius: 10px; border-color: #395579;"><%= consultation_medication.description %></p>
             <% if doctor_signed_in? %>
-              <%= link_to doctor_consultation_medication_path(consultation_medication), method: :delete do %>
-                <i class="fas fa-trash-alt col-6" style="color: red; opacity: 0.7;"></i>
-              <% end %>
-              <%= link_to edit_doctor_consultation_path(@consultation, consultation_medication: consultation_medication) do %>
-                <i class="fas fa-edit col-6" style="color: #395579;"></i>
-              <% end %>
+              <div class="row justify-content-center">
+                <%= link_to doctor_consultation_medication_path(consultation_medication), method: :delete do %>
+                  <i class="fas fa-trash-alt col-6" style="color: red; opacity: 0.7;"></i>
+                <% end %>
+                <%= link_to edit_doctor_consultation_path(@consultation, consultation_medication: consultation_medication) do %>
+                  <i class="fas fa-edit col-6" style="color: #395579;"></i>
+                <% end %>
+              </div>
             <% end %>
           </div>
         <% end %>
