--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -32,7 +32,7 @@
       <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
         <% if doctor_signed_in?  %>
           <%= link_to destroy_doctor_session_path, method: :delete do %>
-            <p class="dropdown-item"><%= current_doctor.full_name %></p>
+            <p class="dropdown-item"><%= current_doctor.email %></p>
             <div class="dropdown-divider"></div>
             <p class="dropdown-item">Logout</p>
           <% end %>
