--- a/app/views/shared/_chatroom.html.erb
+++ b/app/views/shared/_chatroom.html.erb
@@ -1,35 +1,45 @@
-<div id="chatroom-container" class="col-12" style="background-color: #AABAD9;">
+<div class="container" style="margin-top: 70px;">
 
-  <div class="row d-flex align-items-center justify-content-center">
+
+  <div class="row mb-5">
     <div class="col-2">
       <% doctor_signed_in? ? path = doctor_patient_path(@patient) : path = dashboard_path %>
       <%= link_to path do %>
-        <i class="fas fa-chevron-circle-left fa-3x mt-3" style="color: #395579;"></i>
+        <i class="fas fa-chevron-circle-left fa-3x mt-3 mb-3" style="color: #395579;"></i>
       <% end %>
     </div>
-    <div class="col-10 mt-3">
-      <h2 class="card-text font-weight-bold text-center mb-2">Chat</h2>
+    <div class="col-8 mt-3">
+      <h1 class="card-text font-weight-bold text-center mb-2">Chat</h1>
     </div>
   </div>
 
-  <div id="messages" data-chatroom-id="<%= @chatroom.id %>" class="row d-flex">
+  <div id="messages" data-chatroom-id="<%= @chatroom.id %>" class="row d-flex justify-content-center">
     <% @messages.each do |message| %>
       <%= render "shared/message", message: message %>
     <% end %>
   </div>
 
-  <div>
-    <%= simple_form_for [ @chatroom, @message ], url: doctor_signed_in? ? doctor_chatroom_messages_path(@chatroom) : chatroom_messages_path(@chatroom) do |f| %>
-      <div class="m-3 row d-flex">
-        <div class="col-9">
-          <%= f.input :content, as: :text, label: false %>
-        </div>
-        <%= button_tag type: 'submit', style: "color: white; background-color: #395579; border-radius: 8px;" do %>
-          <i class="d-flex align-items-center col-3 fas fa-paper-plane fa-2x" aria-hidden="true"></i>
-        <% end %>
-      </div>
-    <% end %>
-  </div>
+  <hr>
+  <%= simple_form_for [ @chatroom, @message ], url: doctor_signed_in? ? doctor_chatroom_messages_path(@chatroom) : chatroom_messages_path(@chatroom), class: "row d-flex border border-primary" do |f| %>
+    <%= f.input :content, as: :text, label: false, class: "col-11" %>
+    <div class='d-flex justify-content-end'>
+      <%= f.submit "Send", class: "btn btn-primary mt-2 mb-3", style: "width: 100%;" %>
+    </div>
+  <% end %>
+
+<!--  <div class="row justify-content-center">-->
+<!--    <div class="card col-11 d-flex justify-content-center mt-3 mb-5 d-inline-block h-auto" style="height: 120px; background-color: white; border-radius: 8px; border: none;" >-->
+<!--      <div>-->
+        <%#= simple_form_for [ @chatroom, @message ], url: doctor_signed_in? ? doctor_chatroom_messages_path(@chatroom) : chatroom_messages_path(@chatroom) do |f| %>
+          <%#= f.input :content, as: :text, label: false %>
+<!--          <div class='d-flex justify-content-end'>-->
+            <%#= f.submit "Save", class: "btn btn-primary mt-2 mb-3", style: "width: 100%;" %>
+<!--          </div>-->
+        <%# end %>
+<!--      </div>-->
+
+<!--    </div>-->
+<!--  </div>-->
 
   <br>
   <br>
