--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="container" style="margin-top: 70px;">
 
     <div class="row justify-content-center mt-5 p-5" >
-      <%= image_tag("youmind_logo", size: "350x350") %>
+      <%= image_tag("youmind_logo.png", size: "350x350") %>
     </div>
     <div class="row justify-content-center mt-5">
       <% if doctor_signed_in? %>
