--- a/app/views/devise/invitations/edit.html.erb
+++ b/app/views/devise/invitations/edit.html.erb
@@ -1,13 +1,11 @@
 <div class="container" style="margin-top: 70px;">
   <div class='d-flex justify-content-center pt-5'>
-    <h2>Signup</h2>
+    <h2>Login</h2>
   </div>
+
   <div class='d-flex justify-content-center'>
-    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-      <div class="field">
-        <%= f.label :email, 'Email' %><br />
-        <%= f.email_field :email, autofocus: true, class: 'form-control'%>
-      </div>
+    <%= simple_form_for(resource, as: resource_name, url: invitation_path(resource_name), html: { method: :put }) do |f| %>
+      <%=  f.hidden_field :invitation_token %>
       <div class="field">
         <%= f.label :password, 'Password' %><br />
         <%= f.password_field :password, class: 'form-control' %>
@@ -18,14 +16,9 @@
       </div>
 
       <div class="actions">
-        <strong> <%= f.submit 'Submit', class: 'btn btn-primary btn-sign-in'%></strong><br>
-      </div>
-
-      <div id='link'>
-        <small><strong><%= render "devise/shared/links" %> </strong></small>
+        <strong> <%= f.submit 'Save', class: 'btn btn-primary btn-sign-in'%></strong><br>
       </div>
 
     <% end %>
   </div>
 </div>
-
