--- a/app/views/doctor/consultations/edit.html.erb
+++ b/app/views/doctor/consultations/edit.html.erb
@@ -1,75 +1,36 @@
 <div class="container" style="margin-top: 70px;">
 
-  <div class="row mb-3">
+  <div class="row mb-5 align-items-center ">
     <div class="col-2">
       <%= link_to doctor_consultation_path(@consultation) do %>
-        <i class="fas fa-chevron-circle-left fa-3x mt-3 mb-3" style="color: #395579;"></i>
+        <i class="fas fa-chevron-circle-left fa-2x mt-3 mb-3" style="color: #395579;"></i>
       <% end %>
     </div>
     <div class="col-8 mt-3">
-      <h1 class="card-text font-weight-bold text-center mb-2">Edit Consultation</h1>
+      <h6 class="card-text font-weight-bold text-center mb-2">Edit reports</h6>
     </div>
   </div>
 
-  <h2 class="row justify-content-center mb-5"><%= @consultation.full_date %></h2>
-
-
-  <div class="row justify-content-center">
-    <div class="card col-11 d-flex justify-content-center mt-3 mb-5 d-inline-block h-auto" style="height: 120px; background-color: white; border-radius: 8px; border: none;" >
-      <div class=" row justify-content-center mt-3 align-items-center">
-        <h2 class="col-10 card-text font-weight-bold text-center" style="color: #395579;">Public report</h2>
-      </div>
-      <div>
-        <%= simple_form_for [ @consultation ], url: doctor_consultation_path(@consultation) do |f| %>
-          <%= f.input :public_report, as: :text, label: false %>
-          <div class='d-flex justify-content-end'>
-            <%= f.submit "Save", class: "btn btn-primary mt-2 mb-3", style: "width: 100%;" %>
-          </div>
-        <% end %>
-      </div>
-
+  <div class="row justify-content-between border-bottom mt-5">
+    <div class="ml-3">
+      <h6 class="font-weight-bold"><%= "Consultation - #{@consultation.calendar_date} " %></h6>
     </div>
   </div>
 
-  <div class="row justify-content-center">
-    <div class="card col-11 d-flex justify-content-center mt-3 mb-5 d-inline-block h-auto" style="height: 120px; background-color: white; border-radius: 8px; border: none;" >
-      <div class=" row justify-content-center mt-3 align-items-center">
-        <h2 class="col-10 card-text font-weight-bold text-center" style="color: #395579;">Personal notes</h2>
+  <div class="mt-5">
+    <%= simple_form_for [ @consultation ], url: doctor_consultation_path(@consultation) do |f| %>
+      <div class="field">
+        <%= f.label :public_report, 'Public report', class: "font-weight-bold" %><br />
+        <%= f.input :public_report, as: :text, label: false, autofocus: true, class: 'form-control'%>
       </div>
-      <div>
-        <%= simple_form_for [ @consultation ], url: doctor_consultation_path(@consultation) do |f| %>
-          <%= f.input :private_report, as: :text, label: false %>
-          <div class='d-flex justify-content-end'>
-            <%= f.submit "Save", class: "btn btn-primary mt-2 mb-3", style: "width: 100%;" %>
-          </div>
-        <% end %>
+      <div class="field mt-5">
+        <%= f.label :private_report, 'Personal notes', class: "font-weight-bold" %><br />
+        <%= f.input :private_report, as: :text, label: false, autofocus: true, class: 'form-control'%>
       </div>
-
-    </div>
+      <div class="actions mt-5">
+        <%= f.submit "Save", class: "btn btn-primary", style: "width: 100%;" %>
+      </div>
+    <% end %>
   </div>
-
-  <div class="row justify-content-center">
-    <div class="card col-11 d-flex justify-content-center mt-3 mb-5 d-inline-block h-auto" style="height: 120px; background-color: white; border-radius: 8px; border: none;" >
-      <div class=" row justify-content-center mt-3 align-items-center">
-        <h2 class="col-10 card-text font-weight-bold text-center" style="color: #395579;">Drug prescription</h2>
-      </div>
-      <div>
-        <%= simple_form_for [ @consultation, @consultation_medication ], url: @consultation_medication.id.present? ? doctor_consultation_medication_path(@consultation_medication) : doctor_consultation_consultation_medications_path(@consultation) do |f| %>
-          <%= f.input :medication_id, collection: @medications, label: false %>
-          <%= f.input :quantity, label: false %>
-          <%= f.input :description, as: :text, label: false %>
-          <div class='d-flex justify-content-end'>
-            <%= f.submit "Save", class: "btn btn-primary mt-2 mb-3", style: "width: 100%;" %>
-          </div>
-        <% end %>
-      </div>
-
-    </div>
-  </div>
-
-
-  <br>
-  <br>
-  <br>
 
 </div>
