--- a/app/views/doctor/patients/new.html.erb
+++ b/app/views/doctor/patients/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container" style="margin-top: 70px;">
 
-  <div class="row mb-5">
+  <div class="row mb-5 align-items-center ">
     <div class="col-2">
       <%= link_to doctor_patients_path do %>
         <i class="fas fa-chevron-circle-left fa-2x mt-3" style="color: #395579;"></i>
