--- a/app/views/shared/_consultation_show.html.erb
+++ b/app/views/shared/_consultation_show.html.erb
@@ -1,74 +1,68 @@
 <div class="container" style="margin-top: 70px;">
 
-  <div class="row mb-3">
+  <div class="row mb-5 align-items-center ">
     <div class="col-2">
       <% doctor_signed_in? ? path = doctor_patient_path(@patient) : path = dashboard_path %>
       <%= link_to path do %>
-        <i class="fas fa-chevron-circle-left mt-3 mb-3" style="color: #395579;"></i>
+        <i class="fas fa-chevron-circle-left fa-2x mt-3 mb-3" style="color: #395579;"></i>
       <% end %>
     </div>
     <div class="col-8 mt-3">
-      <h6 class="card-text font-weight-bold text-center mb-2">Consultation</h6>
+      <h6 class="card-text font-weight-bold text-center mb-2"><%= "Consultation - #{@consultation.calendar_date}" %></h6>
     </div>
   </div>
 
-  <div class="row justify-content-between border-bottom mt-5">
-    <div class="ml-3">
-      <h6 class="font-weight-bold"><%= @consultation.full_date %></h6>
-    </div>
-  </div>
-
-  <div class="container mt-5 ml-3">
-    <div class="row">
-      <h6 class="font-weight-bold ">Public report</h6>
-      <% if doctor_signed_in? %>
-        <%= link_to edit_doctor_consultation_path(@consultation) do %>
-          <i class="fas fa-edit col-2"></i>
-        <% end %>
+  <div class="row border-bottom mt-5 ml-3">
+    <h6 class="font-weight-bold">Reports</h6>
+    <% if doctor_signed_in? %>
+      <%= link_to edit_doctor_consultation_path(@consultation) do %>
+        <i class="fas fa-edit col-2"></i>
       <% end %>
+    <% end %>
+  </div>
+
+  <div class="container mt-5 ml-5">
+    <div class="row">
+      <h6 class="font-weight-bold ">Suggestions</h6>
     </div>
-    <div class="row mt-2 mr-3">
+    <div class="row mt-2 mr-5">
       <p class="mb-3 text-justify h-auto"><%=  @consultation.public_report.present? ? "#{@consultation.public_report}" : "No report" %></p>
     </div>
   </div>
 
   <% if doctor_signed_in? %>
-    <div class="container mt-5 ml-3">
+    <div class="container mt-5 ml-5">
       <div class="row">
         <h6 class="font-weight-bold ">Personal notes</h6>
-        <% if doctor_signed_in? %>
-          <%= link_to edit_doctor_consultation_path(@consultation) do %>
-            <i class="fas fa-edit col-2"></i>
-          <% end %>
-        <% end %>
       </div>
-      <div class="row mt-2 mr-3">
+      <div class="row mt-2 mr-5">
         <p class="mb-3 text-justify h-auto"><%=  @consultation.private_report.present? ? "#{@consultation.private_report}" : "No notes" %></p>
       </div>
     </div>
   <% end %>
 
-  <div class="container mt-5 ml-3">
-    <div class="row">
-      <h6 class="font-weight-bold ">Prescription</h6>
-      <% if doctor_signed_in? %>
-        <%= link_to edit_doctor_consultation_path(@consultation) do %>
-          <i class="fas fa-plus-circle col-2"></i>
-        <% end %>
+  <div class="row border-bottom mt-5 ml-3">
+    <h6 class="font-weight-bold">Prescription</h6>
+    <% if doctor_signed_in? %>
+      <%= link_to new_doctor_consultation_consultation_medication_path(@consultation)	 do %>
+        <i class="fas fa-plus-circle col-2"></i>
       <% end %>
-    </div>
+    <% end %>
+  </div>
+
+  <div class="container mt-5 ml-5">
     <div>
       <% if !@consultation_medications.empty? %>
         <% @consultation_medications.each do |consultation_medication| %>
-          <div class="row mt-2 mr-3" >
+          <div class="row mt-5 mr-3" >
             <p class="mb-3 text-justify h-auto mr-3" ><%= consultation_medication.quantity %></p>
-            <p class="mb-3 text-justify h-auto mr-5" ><%= consultation_medication.medication.name %></p>
+            <p class="mb-3 text-justify h-auto mr-3" ><%= consultation_medication.medication.name %></p>
             <% if doctor_signed_in? %>
               <div class="row justify-content-center">
                 <%= link_to doctor_consultation_medication_path(consultation_medication), method: :delete do %>
                   <i class="fas fa-trash-alt col-6" style="color: red; opacity: 0.7;"></i>
                 <% end %>
-                <%= link_to edit_doctor_consultation_path(@consultation, consultation_medication: consultation_medication) do %>
+                <%= link_to edit_doctor_consultation_medication_path(consultation_medication) do %>
                   <i class="fas fa-edit col-6" style="color: #395579;"></i>
                 <% end %>
               </div>
