--- a/app/views/doctor/patients/new.html.erb
+++ b/app/views/doctor/patients/new.html.erb
@@ -32,7 +32,7 @@
         <%= f.input :email, label: false, autofocus: true, class: 'form-control' %>
       </div>
       <div class="actions">
-        <%= f.submit "Save", class: "btn btn-primary" %>
+        <%= f.submit "Save", class: "btn btn-primary" , style: "background-color: #ff8800; border: none;" %>
       </div>
     <% end %>
   </div>
