--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<% params[:controller].include?("doctor") ? bg_color = "#395579" : bg_color = "#404042" %>
+<% params[:controller].include?("doctor") ? bg_color = "#395579" : bg_color = "#00204a" %>
 <nav class="align-items-center p-2 navbar navbar-default navbar-fixed-top" style="background-color: <%= bg_color %>; position:fixed; top:0; z-index: 9999; width: 100%;  height: 70px;">
   <% if doctor_signed_in? || patient_signed_in? %>
     <div class="ml-3">
