--- a/app/views/shared/_patient_profile.html.erb
+++ b/app/views/shared/_patient_profile.html.erb
@@ -63,7 +63,7 @@
       <% if doctor_signed_in? %>
         <div class="justiy-content-end mr-3">
           <%= link_to new_doctor_patient_consultation_path(@patient) do %>
-            <button class="btn btn-primary">Add consultation</button>
+            <button class="btn btn-primary" style="background-color: #ff8800; border: none;">Add consultation <i class="ml-2 fas fa-plus"></i></button>
           <% end %>
         </div>
       <% end %>
@@ -71,35 +71,33 @@
 
     <% @upcoming_consultations.each do |upcoming_consultation| %>
         <div class="container mt-3 border-bottom">
-          <div class="row">
-            <div class="col-4 offset-4">
-              <p class="font-weight-bold"><%= @next_consultation.present? ? "#{@next_consultation.calendar_date}" : "No consultation scheduled"%></p>
+          <div class="row align-items-center pb-3">
+            <div class="col-2">
+              <span class="badge badge-primary badge-pill" style="background-color: red;">upcoming</span>
             </div>
-            <div class="col-4">
-              <p class="font-weight-bold"><%= @next_consultation.present? ? "#{@next_consultation.time_date}" : "No consultation scheduled"%></p>
+            <div class="col-8 ">
+              <p class="font-weight-bold"><%= @next_consultation.present? ? "#{@next_consultation.calendar_date}" : "No consultation scheduled"%></p>
+              <p class=""><%= @next_consultation.present? ? "#{@next_consultation.time_date}" : "No consultation scheduled"%></p>
             </div>
           </div>
         </div>
     <% end %>
     <% @past_consultations.each do |past_consultation| %>
       <div class="container mt-3 border-bottom">
-        <div class="row align-items-start">
-          <div class="col-4">
+        <div class="row align-items-center pb-3">
+          <div class="col-8 offset-2">
+            <p class="font-weight-bold"><%= past_consultation.calendar_date %></p>
+            <p><%= past_consultation.time_date %></p>
+          </div>
+          <div class="col-2">
             <% if doctor_signed_in? %>
               <%= link_to doctor_consultation_path(past_consultation) do %>
-                <span class="badge badge-primary badge-pill"">DETAIL</span>
+                <button class="btn btn-primary">Detail <i class="ml-2 fas fa-search"></i></button>
               <% end %>
             <% else %>
               <%= link_to consultation_path(past_consultation) do %>
-                <span class="badge badge-primary badge-pill"">DETAIL</span>
+                <button class="btn btn-primary">Detail <i class="ml-2 fas fa-search"></i></button>
               <% end %>
-            <% end %>
-          </div>
-          <div class="col-8">
-            <% if doctor_signed_in? %>
-                <p><%= past_consultation.calendar_date %></p>
-            <% else %>
-                <p><%= past_consultation.calendar_date %></p>
             <% end %>
           </div>
         </div>
