responsive design patient_profile

--- a/app/views/doctor/patients/index.html.erb
+++ b/app/views/doctor/patients/index.html.erb
@@ -13,7 +13,7 @@
 
   <div class="row justify-content-between border-bottom pb-3">
     <div class="align-self-end ml-3">
-      <h6 class="font-weight-bold">Patients</h6>
+      <h6 class="font-weight-bold">Patients<i class="ml-3 fas fa-user-friends"></i></h6>
     </div>
     <div class="justiy-content-end mr-3">
       <%= link_to new_doctor_patient_path do %>
